--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,9 @@ android {
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // added by hwc at 2017/12/20
-    compile "com.android.support:cardview-v7:26.1.0"
+    compile 'com.android.support:cardview-v7:26.1.0'
     // add by hwc at 2017/12/26 修复分包问题
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:26.+'
@@ -53,28 +53,25 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //导入magicindicator module 并添加依赖
     compile 'com.github.hackware1993:MagicIndicator:1.5.0'
-
     // added by hwc at 2017/12/20
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     compile 'com.ericliu.asyncexpandablelist:asyncexpandablelist:1.1.0'
-
     // added by hwc at 2018/1/1　
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//配合Rxjava 使用
-
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //配合Rxjava 使用
     //glide added by hwc at 2018/1/3　
     compile 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-
     //add by lx at 2018/1/5
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //added by lry 2018/1/5
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.1'
+    implementation files('libs/pinyin4j-2.5.0.jar')
 }
