--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -76,4 +82,6 @@ dependencies {
     //added by lry 2018/1/5
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.1'
     implementation files('libs/pinyin4j-2.5.0.jar')
+    //added by lx 2018/5/14
+    compile(name:'paysdk-release-1.2.2', ext:'aar')
 }
