--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".customized.activity.SkillDetails" />
         <activity android:name=".customized.activity.SearchResult" />
+        <activity android:name=".customized.TrPay.PayActivity"/>
         <!-- ————————定制—————————— -->
 
         <!-- ——————publish start—————— -->
