开发需求评论功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,7 @@
         <activity android:name=".ui.activity.AsyncNeedActivity" />
         <activity android:name=".ui.activity.PersonInfoActivity" />
         <activity android:name=".ui.activity.NeedInfoActivity" />
+        <activity android:name=".ui.activity.SkillInfoActivity" />
 
         <!-- ——————nearby end—————— -->
 
